--- a/app/views/admin/workshops/_edit_form.html.haml
+++ b/app/views/admin/workshops/_edit_form.html.haml
@@ -4,7 +4,7 @@
       = f.association :chapter, as: :select, collection: Chapter.available_to_user(current_user)
   .row
     .large-3.columns
-      = f.input :date_and_time, as: :string, required: true, label: "Date", input_html: { data: { value: @workshop.date_and_time } }
+      = f.input :date_and_time, as: :string, required: true, label: "Date", input_html: { data: { value: @workshop.date_and_time.strftime("%d/%m/%Y") } }
   .row
     .large-3.columns
       = f.input :time, as: :string, required: true, input_html: { id: "sessions_time", data: { value: (@workshop.time).strftime("%H:%M") }}
