--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,18 +1,22 @@
 %section.stripe.reverse
   .row
-    .medium-12.columns
+    .medium-6.columns
       %h2
         =@meeting.name
       %h3
         %small=humanize_date_with_time(@meeting.date_and_time)
-      %p.lead= @meeting.description.html_safe
+
 
   .row
-    .large-3.small-6.columns#host
+    .medium-4.columns#host
       - if @meeting.venue.present?
         %h4 Venue
         %strong= @meeting.venue.name
         %p= @host_address
+
+    .medium-6.columns
+      %h4 Agenda
+      %p= @meeting.description.html_safe
 
   %br
   .row
@@ -35,3 +39,17 @@
     .large-12.columns
       %iframe{ width: '100%', height: '250', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
         =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
+
+.stripe.reverse
+  .row
+    .large-12.columns
+      %h4.text-center Who else will be there?
+      %br
+      %ul.small-block-grid-2.medium-block-grid-4
+        - @attendees.each do |a|
+          %li.text-center
+            =image_tag a.member.avatar(96), class: 'th radius', title: a.member.full_name
+            %br
+            %br
+            =a.member.full_name
+
