--- a/app/views/layouts/_admin_menu.html.haml
+++ b/app/views/layouts/_admin_menu.html.haml
@@ -6,6 +6,7 @@
   %li=link_to "New workshop", new_admin_workshop_path
   %li=link_to "New sponsor", new_admin_sponsor_path
 %li=link_to "New event", new_admin_event_path
+%li=link_to "New monthly", new_admin_meeting_path
 %li=link_to "New chapter", new_admin_chapter_path
 %li=link_to "New group", new_admin_group_path
 %li=link_to "Review jobs (#{jobs_pending_approval})", admin_jobs_path
