--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -14,18 +14,22 @@
         %strong= @meeting.venue.name
         %p= @host_address
 
-      - if @meeting.invitable && @meeting.not_full
+      %h4 RSVP
+      - if logged_in?
+        - if @meeting.invitable && @meeting.not_full
 
-        - if @meeting.attending?(current_user)
-          %h5 You are attending this event.
-          %strong
-            = link_to "Can't make it anymore? Click here to cancel your spot.", meeting_cancel_path(meeting_id: @meeting.id, token: @invitation.token)
-        - else
-          = link_to meeting_invitation_path(@meeting), class: 'button round' do
-            = "Attend"
-      - elsif !@meeting.not_full
-        %h5 This event is now full.
-        %strong To join the waitlist, please <a href="mailto:london@codebar.io">email us</a>.
+          - if @meeting.attending?(current_user)
+            %h5 You are attending this event.
+            %strong
+              = link_to "Can't make it anymore? Click here to cancel your spot.", meeting_cancel_path(meeting_id: @meeting.id, token: @invitation.token)
+          - else
+            = link_to meeting_invitation_path(@meeting), class: 'button round' do
+              = "Attend"
+        - elsif !@meeting.not_full
+          %h5 This event is now full.
+          %strong To join the waitlist, please <a href="mailto:london@codebar.io">email us</a>.
+      - else
+        %strong You must be logged in first.
 
     .medium-8.columns
       %h4 Agenda
