--- a/app/views/members/step1.html.haml
+++ b/app/views/members/step1.html.haml
@@ -9,13 +9,13 @@
   = simple_form_for @member, method: :put, url: {action: :step1}, html: {class: "sign-up-wizard"} do |f|
     .row
       .large-6.large-offset-3.columns
-        = f.input :preferred_pronoun
-    .row
-      .large-6.large-offset-3.columns
         = f.input :name, label: "First name", required: true
     .row
       .large-6.large-offset-3.columns
         = f.input :surname, required: true
+    .row
+      .large-6.large-offset-3.columns
+        = f.input :preferred_pronoun, placeholder: "e.g. she/her"
 
     .row
       .large-6.large-offset-3.columns
