--- a/app/views/admin/events/show.html.haml
+++ b/app/views/admin/events/show.html.haml
@@ -15,6 +15,11 @@
       %i.fa.fa-send-o
       %label Invite
 
+  =link_to admin_event_attendees_emails_path(@event, format: 'text'), class: 'item' do
+    %i.fa.fa-at
+    %label Emails
+
+
 %section
   .stripe.reverse
     .row
