--- a/app/views/admin/meetings/_invitation_management.html.haml
+++ b/app/views/admin/meetings/_invitation_management.html.haml
@@ -4,6 +4,22 @@
       .panel
         %p
           <strong>#{@invitations.count}</strong> members have RSVP'd to this event.
+
+  .row
+    .large-9.columns
+      %small
+      .row
+        = simple_form_for :meeting_invitations, url: admin_meeting_invitations_path do |f|
+          .medium-6.columns
+            = f.select :member, Member.all.map { |u| ["#{u.full_name}", u.id] }, { include_blank: true }, { class: 'chosen-select', required: true, data: { placeholder: 'Select a member to RSVP' } }
+
+            = f.input :meeting_id, :as => :hidden, :input_html => { :value => @meeting.slug }
+          .large-3.columns
+            %span{ "data-tooltip" => true, "aria-haspopup" => "true", class: "has-tip", title: t('admin.workshop.manage_rsvps.text') }
+              %i.fa.fa-info
+            = f.submit "Add"
+      %br
+
   .row
     .medium-6.columns
       %h4
