change “preferred_pronoun” to “pronouns”
Also changes the question “Preferred pronoun?”
to “What pronouns do you use?”

And “Preferred pronoun” on a profile page to
“Pronouns”

Based on:
http://mashable.com/2015/10/18/transgender-ally-words/

--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -6,7 +6,7 @@
       = f.input :surname
   .row
     .large-4.column
-      = f.input :preferred_pronoun, placeholder: "e.g. she/her"
+      = f.input :pronouns, label: "What pronouns do you use?", placeholder: "e.g. she/her"
 
   .row
     .large-6.columns
