--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -24,8 +24,8 @@
     .row
       .medium-8.columns
         %dl
-          %dt Preferred pronoun
-          %dd= @member.preferred_pronoun || "Not specified"
+          %dt Pronouns
+          %dd= @member.pronouns || "Not specified"
 
           %dt Email
           %dd= mail_to @member.email, @member.email
