--- a/app/views/members/_show.html.haml
+++ b/app/views/members/_show.html.haml
@@ -10,8 +10,8 @@
     .row
       .medium-8.columns
         %dl
-          %dt Preferred pronoun
-          %dd= member.preferred_pronoun || "Not specified"
+          %dt Pronouns
+          %dd= member.pronouns || "Not specified"
 
           %dt Email
           %dd= mail_to member.email, member.email
