--- a/app/views/members/step1.html.haml
+++ b/app/views/members/step1.html.haml
@@ -15,7 +15,7 @@
         = f.input :surname, required: true
     .row
       .large-6.large-offset-3.columns
-        = f.input :preferred_pronoun, placeholder: "e.g. she/her"
+        = f.input :pronouns, label: "What pronouns do you use?", placeholder: "e.g. she/her"
 
     .row
       .large-6.large-offset-3.columns
