--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -52,6 +52,8 @@
               %li
                 = link_to [:admin, group] do
                   #{group.name} (#{group.chapter.name})
+                = link_to admin_member_update_subscriptions_path(member_id: @member, group: group), data: {confirm: "Clicking OK will remove this user from this subscription. This cannot be undone. Are you sure?"} do
+                  %span.fa.fa-times
         - else
           %label.label.secondary #{@member.name} is not subscribed to any groups
         %br
