Fix link to chapter on profile page
The member profile page lists all the current users' subscriptions. But
the entries link to the admin section of the site, which most people
won't have access to.

People clicking the link will see a message "You can't be here"
(indicating that they haven't got enough permissions for this).

I think the original intention was to link to the chapter page. This
commit fixes the link.

--- a/app/views/members/_show.html.haml
+++ b/app/views/members/_show.html.haml
@@ -39,7 +39,7 @@
           %ul.no-bullet
             - member.groups.each do |group|
               %li
-                = link_to [:admin, group] do
+                = link_to chapter_path(group.chapter.slug) do
                   #{group.name} (#{group.chapter.name})
         - else
           %label.label.secondary You are not subscribed to any groups
