--- a/app/views/layouts/_aside.html.haml
+++ b/app/views/layouts/_aside.html.haml
@@ -2,10 +2,10 @@
   %ul.off-canvas-list
     - if current_user.is_admin?
       = render 'layouts/admin_menu'
+    - elsif current_user.is_organiser?
+      = render 'layouts/organiser_menu'
     - elsif current_user.is_monthlies_organiser?
       = render 'layouts/monthlies_org_menu'
-    - elsif current_user.has_role?(:organiser, :any)
-      = render 'layouts/organiser_menu'
     %li
       %label Portal
       %li= link_to 'Jobs',  jobs_path
