--- a/app/views/admin/workshops/show.html.haml
+++ b/app/views/admin/workshops/show.html.haml
@@ -7,11 +7,10 @@
       %i.fa.fa-send-o
       %label Invite
   - elsif @workshop.has_valid_host? and @workshop.invitable?
-    = link_to admin_workshop_invite_path(@workshop), method: :post, class: 'item' do
+    = link_to admin_workshop_send_invites_path(@workshop), class: 'item' do
       %i.fa.fa-send-o
       %label Invite
   - else
-
     = link_to '#', class: 'item disabled', title: 'The workshop is not invitable.' do
       %i.fa.fa-send-o
       %label Invite
