Add missing alt tags on images using existing .name variables

--- a/app/views/admin/sponsors/show.html.haml
+++ b/app/views/admin/sponsors/show.html.haml
@@ -12,7 +12,7 @@
 
     .large-3.columns
       %h4 Logo
-      = image_tag @sponsor.avatar
+      = image_tag(@sponsor.avatar, alt: @sponsor.name)
     .large-3.columns
       %h4 Contacts
       = SponsorDecorator.new(@sponsor).contact_info
