--- a/app/views/coach/_coach.html.haml
+++ b/app/views/coach/_coach.html.haml
@@ -7,7 +7,7 @@
             .row
               .small-2.columns
                 =link_to twitter_url_for(coach.twitter), class: 'user-link' do
-                  =image_tag coach.avatar(96), class: 'th radius', title: coach.full_name
+                  =image_tag(coach.avatar(96), class: 'th radius', title: coach.full_name, alt: coach.full_name)
 
               .small-10.columns
                 =link_to twitter_url_for(coach.twitter) do
