--- a/app/views/donations/new.html.haml
+++ b/app/views/donations/new.html.haml
@@ -30,27 +30,27 @@
     %h3 A big thank you to some of our sponsors
   .row.sponsor-row
     .medium-2.small-4.columns
-      = image_tag "sponsors/8th-Light.png", class: "small-image", alt: "codebar logo"
+      = image_tag("sponsors/8th-Light.png", class: "small-image", alt: "codebar logo")
     .medium-2.small-4.columns
-      =image_tag "sponsors/bloomberg.png", alt: "Bloomberg"
+      =image_tag("sponsors/bloomberg.png", alt: "Bloomberg")
     .medium-2.small-4.columns
-      =image_tag "sponsors/ustwo.png", alt: "ustwo"
+      =image_tag("sponsors/ustwo.png", alt: "ustwo")
     .medium-2.small-4.columns
-      =image_tag "sponsors/gds-logo.png", alt: "GDS"
+      =image_tag("sponsors/gds-logo.png", alt: "GDS")
     .medium-2.small-4.columns
-      =image_tag "sponsors/google.png", alt: "Google"
+      =image_tag("sponsors/google.png", alt: "Google")
     .medium-2.small-4.columns
-      =image_tag "sponsors/mozilla.png", alt: "Mozilla"
+      =image_tag("sponsors/mozilla.png", alt: "Mozilla")
   .row.sponsor-row
     .medium-2.small-4.columns
-      =image_tag "sponsors/pivotal.png", alt: "Pivotal Labs"
+      =image_tag("sponsors/pivotal.png", alt: "Pivotal Labs")
     .medium-2.small-4.columns
-      =image_tag "sponsors/shutl_logo.png", alt: "Shutl"
+      =image_tag("sponsors/shutl_logo.png", alt: "Shutl")
     .medium-2.small-4.columns
-      =image_tag "sponsors/softwire.png", alt: "Softwire"
+      =image_tag("sponsors/softwire.png", alt: "Softwire")
     .medium-2.small-4.columns
-      =image_tag "sponsors/StreetTeam.png", alt: "StreetTeam"
+      =image_tag("sponsors/StreetTeam.png", alt: "StreetTeam")
     .medium-2.small-4.columns
-      =image_tag "sponsors/the-guardian.png", alt: "The Guardian"
+      =image_tag("sponsors/the-guardian.png", alt: "The Guardian")
     .medium-2.small-4.columns
-      =image_tag "sponsors/ticketmaster.png", alt: "Ticketmaster"
+      =image_tag("sponsors/ticketmaster.png", alt: "Ticketmaster")
