--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -38,7 +38,7 @@
               .row
                 .large-5.columns
                   =link_to sponsor.website do
-                    =image_tag sponsor.avatar, class: 'sponsor'
+                    =image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
             %br
 
 
