--- a/app/views/admin/meetings/show.html.haml
+++ b/app/views/admin/meetings/show.html.haml
@@ -39,7 +39,7 @@
         %h4 Team
         - @meeting.organisers.each do |organiser|
           %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true',  title: organiser.full_name }
-            = image_tag(organiser.avatar(40))
+            = image_tag(organiser.avatar(40), alt: organiser.full_name)
 
       .large-3.columns
         %h4 Chapters
