--- a/app/views/admin/sponsors/index.html.haml
+++ b/app/views/admin/sponsors/index.html.haml
@@ -20,7 +20,7 @@
           %em Sponsored #{sponsor.workshop_sponsors.count} sessions
 
       .large-4.columns
-        = image_tag sponsor.avatar, class: 'sponsor'
+        = image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
       .large-3.columns
         %p= SponsorDecorator.new(sponsor).contact_info
 
