--- a/app/views/admin/workshops/show.html.haml
+++ b/app/views/admin/workshops/show.html.haml
@@ -67,7 +67,7 @@
         %h4 Team
         - @workshop.organisers.each do |organiser|
           %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true',  title: organiser.full_name }
-            = image_tag(organiser.avatar(40))
+            = image_tag(organiser.avatar(40), alt: organiser.full_name)
 
   .stripe.reverse#invitations
     = render partial: 'invitation_management'
