--- a/app/views/course/invitation/show.html.haml
+++ b/app/views/course/invitation/show.html.haml
@@ -51,7 +51,7 @@
             .row
               .small-2.columns
                 =link_to twitter_url_for(tutor.twitter), class: 'user-link' do
-                  =image_tag tutor.avatar(106), class: 'th radius'
+                  =image_tag(tutor.avatar(106), class: 'th radius', alt: tutor.full_name)
               .small-10.columns
                 =link_to twitter_url_for(tutor.twitter) do
                   = tutor.full_name
@@ -76,7 +76,7 @@
         %li
           .row
             .large-4.columns
-              = image_tag @course.venue.avatar, class: 'sponsor'
+              = image_tag(@course.venue.avatar, class: 'sponsor', alt: @course.venue.name)
             .large-8.columns
               =link_to @course.venue.name, @course.venue.website
               %p
@@ -95,7 +95,7 @@
         - @course.organisers.each do |organiser|
           %li.text-center
             =link_to twitter_url_for(organiser.twitter), class: 'user-link' do
-              =image_tag organiser.avatar(56), class: 'th radius', title: organiser.full_name
+              =image_tag(organiser.avatar(56), class: 'th radius', title: organiser.full_name)
             %br
             %br
             = organiser.full_name
