--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -97,7 +97,7 @@
           %li
             .row
               .large-4.columns
-                = image_tag sponsor.avatar, class: 'sponsor'
+                = image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
               .large-8.columns
                 =link_to sponsor.name, sponsor.website
                 %p
@@ -120,7 +120,7 @@
           %li.attendance
             .row
               .small-2.columns
-                =image_tag invitation.member.avatar(96), class: 'th radius', title: invitation.member.full_name
+                =image_tag(invitation.member.avatar(96), class: 'th radius', title: invitation.member.full_name, alt: invitation.member.full_name)
               .small-10.columns
                 =invitation.member.full_name
                 %br
@@ -133,7 +133,7 @@
           %li.attendance
             .row
               .small-2.columns
-                =image_tag invitation.member.avatar(96), class: 'th radius', title: invitation.member.full_name
+                =image_tag(invitation.member.avatar(96), class: 'th radius', title: invitation.member.full_name, alt: invitation.member.full_name)
               .small-10.columns
                 =invitation.member.full_name
             %br
