--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -4,7 +4,7 @@
       %li.name
         =link_to root_path do
           .brand
-            = image_tag "logo.png", alt: "codebar logo", size: "148x40"
+            = image_tag("logo.png", alt: "codebar logo", size: "148x40")
       %li.toggle-topbar.menu-icon
         = link_to '#' do
           .fa.fa-stack-2x.fa-list
