--- a/app/views/admin/workshops/_form.html.haml
+++ b/app/views/admin/workshops/_form.html.haml
@@ -1,19 +1,19 @@
 = simple_form_for [:admin, @workshop], url: :admin_workshops do |f|
   .row
-    .large-3.columns
+    .medium-6.columns
       = f.association :chapter, as: :select, collection: Chapter.available_to_user(current_user)
   .row
-    .large-3.columns
+    .medium-6.columns.admin_margin
       = f.input :local_date, as: :string, required: true, input_html: { data: { value: @workshop.date_and_time.try(:strftime, '%d/%m/%Y') } }
   .row
-    .large-3.columns
+    .medium-6.columns
       = f.input :local_time, as: :string, required: true, input_html: { data: { value: @workshop.time.try(:strftime, '%H:%M') } }
   .row
-    .large-6.columns
-      = f.input :host, as: :select, collection: Sponsor.all, include_blank: true, selected: (@workshop.host.id rescue '')
+    .medium-6.columns
+      = f.input :host, as: :select, required: true, collection: Sponsor.all, include_blank: true, selected: (@workshop.host.id rescue '')
   .row
-    .large-6.columns
-      = f.association :sponsors
+    .medium-6.columns.admin_margin
+      = f.association :sponsors, required: true
   %br
   .row
     .large-6.columns
