paginate coach listing

--- a/app/views/coach/_coach.html.haml
+++ b/app/views/coach/_coach.html.haml
@@ -1,20 +1,27 @@
 .stripe.reverse
   .row
     .large-12.columns
-      %ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3
+      .text-right
+        = will_paginate(@coaches)
+        %br
+        %br
+      %ul.small-block-grid-2.medium-block-grid-5.large-block-grid-5
         - coaches.each do |coach|
           %li.coach
             .row
-              .small-2.columns
-                =link_to twitter_url_for(coach.twitter), class: 'user-link' do
-                  =image_tag(coach.avatar(96), class: 'th radius', title: coach.full_name, alt: coach.full_name)
+              .small-12.columns
+                .text-center
+                  =link_to twitter_url_for(coach.twitter), class: 'user-link' do
+                    =image_tag(coach.avatar(50), class: 'th radius', title: coach.full_name, alt: coach.full_name)
 
-              .small-10.columns
+                %br
                 =link_to twitter_url_for(coach.twitter) do
                   = coach.full_name
-                %p= coach.about_you
+                %p.small= coach.about_you
                 - if coach.skills.any?
                   %p
                     skills:
                     - coach.skills.each do |skill|
                       = link_to skill.name, skill_url(skill.name), class: "skill"
+      .text-right
+        = will_paginate(@coaches)
