--- a/app/views/dashboard/wall_of_fame.html.haml
+++ b/app/views/dashboard/wall_of_fame.html.haml
@@ -3,8 +3,9 @@
     .large-12.columns
       %h2 Coaches
       %p.lead
-        The people below are just a handful of our #{ @total_coaches } volunteer coaches.
+        Here you can find a list of the #{ @coaches.total_entries } volunteers who have coached at codebar.
 
+      %p.lead
         If you’d like to start coaching at a workshop near you, read our #{ link_to "teaching guide", teaching_guide_path } and then #{ link_to "sign up", new_member_path } as a coach. It’s easier than you think!
 
-= render partial: '/coach/coach', locals: { coaches: @top_coaches }
+= render partial: '/coach/coach', locals: { coaches: @coaches }
