--- a/app/views/dashboard/wall_of_fame.html.haml
+++ b/app/views/dashboard/wall_of_fame.html.haml
@@ -3,9 +3,5 @@
     .large-12.columns
       %h2 Coaches
       %p.lead
-        Here you can find a list of the #{ @coaches.total_entries } volunteers who have coached at codebar.
-
-      %p.lead
-        If you’d like to start coaching at a workshop near you, read our #{ link_to "teaching guide", teaching_guide_path } and then #{ link_to "sign up", new_member_path } as a coach. It’s easier than you think!
-
+        Would you like to help out by coaching at one of our workshops? Read our #{ link_to "teaching guide", teaching_guide_path } then sign up as a coach.
 = render partial: '/coach/coach', locals: { coaches: @coaches }
